--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ charset-normalizer==3.4.1
 click==8.1.8
 cmake==3.31.4
 colorama==0.4.6
-dlib @ file:///C:/Users/Happy/Documents/Dlib_Windows_Python3.x-main/dlib-19.22.99-cp37-cp37m-win_amd64.whl
+dlib
 et-xmlfile==1.1.0
 face-recognition==1.3.0
 face-recognition-models==0.3.0
